hphp/test/zend/good/ext/zip/tests/bug53579.php.skipif
<?php
/* $Id: oo_stream.phpt 260091 2008-05-21 09:27:41Z pajoye $ */
if(!extension_loaded('zip')) die('skip');
?>