hphp/test/zend/bad/ext/mysqli/tests/mysqli_explain_metadata.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');
require_once("connect.inc");
if (!$IS_MYSQLND)
  die("skip Open libmysql/MySQL issue http://bugs.mysql.com/?id=62350");
?>